<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.celulares.Informe2">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lblTituloInforme2"
            android:id="@+id/lblTituloInforme2"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblInforme2Texto"
            android:id="@+id/lblInforme2Texto"
            android:textStyle="bold"
            android:paddingRight="20dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tblDates">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblInforme2No"
                    android:id="@+id/lblInforme2No"
                    android:textStyle="bold"
                    android:paddingRight="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblInforme2Marca"
                    android:id="@+id/lblInforme2Marca"
                    android:textStyle="bold"
                    android:paddingRight="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblInforme2Precio"
                    android:id="@+id/lblInforme2Precio"
                    android:textStyle="bold"
                    android:paddingRight="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblInforme2Ram"
                    android:id="@+id/lblInforme2Ram"
                    android:textStyle="bold"
                    android:paddingRight="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblInforme2Os"
                    android:id="@+id/lblInforme2Os"
                    android:textStyle="bold"
                    android:paddingRight="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblInforme2Color"
                    android:id="@+id/lblInforme2Color"
                    android:textStyle="bold"
                    android:paddingRight="20dp" />

            </TableRow>

        </TableLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
