<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.celulares.Informe3">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lblTituloInforme4"
            android:id="@+id/lblTituloInforme4"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblInforme4Texto"
            android:id="@+id/lblInforme4Texto"
            android:textStyle="bold"
            android:paddingRight="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblInforme4Resultado"
            android:id="@+id/lblInforme4Resultado"
            android:textStyle="bold"
            android:paddingTop="20dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtInforme4Resultado" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
